   equipment for a selected sport type
   - the usage contains the total distance, duration and dates of first and
     last usage
   - Dialog can be started from the Tools menu
 - Exercise Dialog: an info message is shown when the user wants to store an
   exercise without a selected equipment (is often forgotten)
   - not shown when there is no equipment list for the selected sport type
 ExerciseViewer changes:
 - updated Garmin FIT SDK library to version 21.20.00, provides bugfixes
   and support for newer Garmin devices
 - updated Leaflet to version 1.6.0, provides various fixes and performance
   improvements (contributed by Thomas Feuster, PR #219)
- Bugfix for reading exercise files from Garmin Fenix 6 and 5X devices
  (Issue #220: Failed to parse exercise file on new Garmin device)
- Garmin FIT parser: improved lookup of the device / product name
  - added the firmware software version to the device name

v7.7.0:
 SportsTracker changes:
 - updated to JavaFX / OpenJFX 11.0.2
 - updated ControlsFX to version 11.0.0
 - updated JUnit 5 to version 5.4.0
 - Kotlin language can now be used in all SportsTracker Maven modules
   (was limited to st-exerciseviewer before)
 - updated Kotlin to version 1.3.41
 - automatic check for SportsTracker application updates, the latest version
   number is downloaded from the SportsTracker website
   (checked on each application start after 30 seconds)
 - Exercise Dialog: bugfix for issue #206, the average speed input now displays
   the proper unit for the speed mode of the selected sport type
 - Equipment of sport types can now be set to 'not in use', e.g. for worn shoes
   - the Exercise dialog does not display the outdated equipment for selection
     anymore => the user must not search in long lists anymore
   - Sport Type Dialog: the user can toggle the 'not in use' state for each
     equipment
   - the outdated equipment is still present in older Exercise entries, Filter
     and Statistic dialogs
- Module st-util: