@@ -37,7 +37,7 @@ CREATE TABLE EQUIPMENT (
 
 CREATE TABLE EXERCISE (
     ID INTEGER PRIMARY KEY NOT NULL,
-    DATE_TIME TEXT NOT NULL,
+    DATE_TIME INTEGER NOT NULL,
     SPORT_TYPE_ID INTEGER NOT NULL,
     SPORT_SUBTYPE_ID INTEGER NOT NULL,
     INTENSITY TEXT NOT NULL,
@@ -53,7 +53,7 @@ CREATE TABLE EXERCISE (
     ASCENT INTEGER,
     -- descent (height meters) of exercise in meters
     DESCENT INTEGER,
-    -- amount of calories consumed
+    -- amount of kCalories consumed
     CALORIES INTEGER,
     HRM_FILE TEXT,
     EQUIPMENT_ID INTEGER,
