@@ -11,6 +11,8 @@ v7.7.1:
  - Exercise Dialog: an info message is shown when the user wants to store an
    exercise without a selected equipment (is often forgotten)
    - not shown when there is no equipment list for the selected sport type
+ - SQLite Export: column DATE_TIME in table EXERCISE is now of type Integer,
+   the previous type Text has caused problems in queries (e.g. sorting)
  ExerciseViewer changes:
  - updated Garmin FIT SDK library to version 21.20.00, provides bugfixes
    and support for newer Garmin devices
